<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" 
    android:padding="4pt">

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">


        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="20dp" >    <TextView
        android:id="@+id/writerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:focusable="true"
		android:focusableInTouchMode="true"
        />

    <TextView
        android:id="@+id/edit_inputCountLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/youCanInput"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:paddingLeft="20dp"/>
    </LinearLayout>

    <EditText
        android:id="@+id/edit_editor"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:singleLine="false"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left" >

            <Button
                android:id="@+id/edit_image"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/image" />

            <Button
                android:id="@+id/edit_video"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/video" />

            <Button
                android:id="@+id/edit_voice"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/sound" />
        </LinearLayout>

        <Button
            android:id="@+id/edit_ok"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

        <Button
            android:id="@+id/edit_cancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

    </LinearLayout>
</LinearLayout>

</FrameLayout>