<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" 
    android:padding="4pt">

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <TextView
        android:id="@+id/writerLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/writer"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:focusable="true"
		android:focusableInTouchMode="true"
        />


    <TextView
        android:id="@+id/inputCountLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/youCanInput"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <EditText
        android:id="@+id/contentEditor"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:singleLine="false"/>



	<LinearLayout
	    android:id="@+id/removeVideo"
	    android:layout_width="fill_parent"
	    android:layout_height="320dp"
	    android:gravity="center" >

        <ImageButton
            android:id="@+id/writer_removeVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_delete"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/photoPreview"
            android:layout_width="wrap_content"
            android:layout_height="320dp"
            android:src="@drawable/ic_launcher" 
            android:visibility="gone"/>

        <ImageButton
            android:id="@+id/writer_removeSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_delete"
            android:visibility="gone" />
	    
	</LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <Button
            android:id="@+id/okButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>




<Button
    android:id="@+id/writer_videoBtn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="right"
    android:layout_marginRight="220dp"
    android:text="录象"
    android:width="100dp" />



<Button
    android:id="@+id/writer_soundBtn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="right"
    android:layout_marginRight="110dp"
    android:text="录音"
    android:width="100dp" />




<Button
    android:id="@+id/writer_photoBtn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="right"
    android:text="@string/photo"
    android:width="100dp" />

</FrameLayout>