<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="历史轨迹："
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/reader_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" android:layout_weight="1"/>

        <Button
            android:id="@+id/reader_edit"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:text="@string/edit"
            android:minWidth="120dp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/reader_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/reader_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/reader_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound" 
            android:minWidth="120dp"/>

        <Button
            android:id="@+id/reader_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video"
            android:minWidth="120dp" />

    </LinearLayout>

</LinearLayout>