<?xml version="1.0" encoding="utf-8"?> <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:id="@+id/ly_frame"    android:layout_width="fill_parent"    android:layout_height="wrap_content"    android:gravity="clip_vertical"    android:orientation="vertical" >        <RelativeLayout    android:id="@+id/frame_title"    android:layout_width="fill_parent"    android:layout_height="60dp"    android:layout_alignParentTop="true"    android:background="@android:drawable/title_bar"    android:gravity="fill_vertical"    android:paddingTop="4dp" >        <TextView            android:id="@+id/tx_title"            android:layout_width="wrap_content"            android:layout_height="60dp"            android:gravity="center"            android:text="@string/app_title"            android:textAppearance="?android:attr/textAppearanceLarge"            android:textColor="@color/black"            android:layout_marginLeft="40dp" />                    <Button            android:id="@+id/btn_home"            android:layout_width="wrap_content"            android:layout_height="fill_parent"            android:layout_alignParentRight="true"            android:minWidth="128dp"            android:text="@string/home"            android:textSize="20dp"/>                <Button            android:id="@+id/btn_act_3"            android:layout_width="128dp"            android:layout_height="fill_parent"            android:layout_toLeftOf="@+id/btn_home"            android:textSize="20dp" />        <Button            android:id="@+id/btn_act_2"            android:layout_width="128dp"            android:layout_height="fill_parent"            android:layout_toLeftOf="@+id/btn_act_3"            android:textSize="20dp" />        <Button            android:id="@+id/btn_act_1"            android:layout_width="128dp"            android:layout_height="fill_parent"            android:layout_toLeftOf="@+id/btn_act_2"            android:textSize="20dp" />        <TextView            android:id="@+id/tv_cole_tab_name"            android:layout_width="wrap_content"            android:layout_height="60dp"            android:layout_toRightOf="@+id/tx_title"            android:paddingLeft="4dp"            android:gravity="center"            android:textAppearance="?android:attr/textAppearanceLarge" />    </RelativeLayout>        <RelativeLayout    android:layout_below="@+id/frame_title"    android:layout_width="fill_parent"    android:layout_height="wrap_content"    android:background="@android:drawable/title_bar"    android:visibility="gone" >                       <TextView            android:id="@+id/tx_title_second"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_alignParentLeft="true"            android:gravity="center_horizontal"            android:background="@drawable/title_sec_sel"            android:minWidth="200dp"            android:text="@string/app_name"            android:textAppearance="?android:attr/textAppearanceLarge"            android:textColor="@color/black" />    </RelativeLayout>    </RelativeLayout>